fix: inherit letter-spacing
on-behalf-of: @ithaka <robert.niznik@ithaka.org>

--- a/packages/pharos/src/components/link/pharos-link.scss
+++ b/packages/pharos/src/components/link/pharos-link.scss
@@ -5,7 +5,6 @@
 }
 
 #link-element {
-  @include mixins.font-base;
   @include mixins.link-base;
   @include mixins.link-hover;
   @include mixins.interactive-focus;
